Added /url GET to allow loading the file from URL
