# api/swagger.yaml
@@ -44,7 +44,7 @@ paths:
         in: "formData"
         description: "Optional id number to associate with the file"
         required: false
-        type: "string"        
+        type: "string"
       responses:
         200:
           description: "A scan response"
@@ -52,6 +52,44 @@ paths:
             $ref: "#/definitions/inline_response_200"
         400:
           description: "Missing file"
+        422:
+          description: "Cannot process file: filetype, file error, or security problem."
+      x-swagger-router-controller: "File"
+  /url:
+    get:
+      tags:
+      - "url"
+      summary: "Submit a URL for checking"
+      description: ""
+      operationId: "scanUrl"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "url"
+        in: "query"
+        description: "The url to scan"
+        required: true
+        type: "string"
+        pattern: "https?:\/\/.+"
+      - name: "maxPages"
+        in: "query"
+        description: "Override the default maximum number of pages to scan"
+        required: false
+        type: "integer"
+      - name: "id"
+        in: "query"
+        description: "Optional id number to associate with the file"
+        required: false
+        type: "string"
+      responses:
+        200:
+          description: "A scan response"
+          schema:
+            $ref: "#/definitions/inline_response_200"
+        400:
+          description: "Error processing URL"
+        404:
+          description: "File not found"
         422:
           description: "Cannot process file: filetype, file error, or security problem."
       x-swagger-router-controller: "File"
@@ -63,13 +101,13 @@ definitions:
         description: "the filename"
       id:
         type: "string"
-        description: "id number (if provided)"        
+        description: "id number (if provided)"
       hasText:
         type: "boolean"
         description: "does the file contain text"
       pages:
         type: "integer"
-        description: "number of pages in document"        
+        description: "number of pages in document"
 externalDocs:
   description: "Find out more about Swagger"
   url: "http://swagger.io"
