# controllers/File.js
@@ -7,3 +7,7 @@ var File = require('./FileService');
 module.exports.scanFile = function scanFile (req, res, next) {
   File.scanFile(req.swagger.params, res, next);
 };
+
+module.exports.scanUrl = function scanUrl (req, res, next) {
+  File.scanUrl(req.swagger.params, res, next);
+};
